# evallocator

./: README.md
gnuplot/: plot_load_m.gp  plot_load_max_len.gp  plot_load_n.gp  plot_load_n_m.gp
python/: maxflow_config_gen_const_eps.py  maxflow_config_gen_epsilon.py  plot_maxflow_stash_mode.py  plot_maxflow_stash_size.py  plot_maxflow_timings.py  plot_modes.py  plot_normalized_overflow.py  plot_overflow.py  plot_space_normalized_overflow.py  two_choice_alloc.py
rust/: .gitignore  Cargo.toml  example_config.json  max_flow_config.json
rust/src/: alloc_algorithm.rs  blocked_one_choice_alloc.rs  main.rs  main_max_flow.rs  max_flow.rs  one_choice_alloc.rs  two_choice_alloc.rs  utils.rs  zipf_test.rs
