[package]
name = "evallocator"
version = "0.1.0"
authors = ["Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"

[[bin]]
name = "evallocator"
path = "src/main.rs"

[[bin]]
name = "zipf_test"
path = "src/zipf_test.rs"

[[bin]]
name = "max_flow"
path = "src/main_max_flow.rs"


[dependencies]
rand = "^0.8.5"
indicatif = "0.11.0"
rayon = "^1.5.3"
gnuplot = "^0.0.37"
serde={ version = "1", features = ["derive"] }
serde_json = "1.0"
zipf = "7.0"

csv = "1.1"

structopt = { version = "0.2", default-features = false }
